@@ -27,3 +27,4 @@ Paul Martin                <pm@zetnet.net>
 Jonathan Yarden            <jyarden@bluegrass.net>
 Patrick Cole               <z@amused.net>
 Rhys Kidd                  <rhys.kidd@staff.westnet.com.au>
+Daryl Tester		   <daryl.tester@iocane.com.au>
